@@ -1,23 +1,22 @@
 package com.moogsan.moongsan_backend.domain.chatting.service.query;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.moogsan.moongsan_backend.domain.chatting.dto.query.ChatMessagePageResponse;
 import com.moogsan.moongsan_backend.domain.chatting.dto.query.ChatMessageResponse;
 import com.moogsan.moongsan_backend.domain.chatting.entity.ChatMessageDocument;
 import com.moogsan.moongsan_backend.domain.chatting.entity.ChatParticipant;
 import com.moogsan.moongsan_backend.domain.chatting.entity.ChatRoom;
-import org.bson.types.ObjectId;
 import com.moogsan.moongsan_backend.domain.chatting.exception.specific.ChatRoomNotFoundException;
 import com.moogsan.moongsan_backend.domain.chatting.exception.specific.NotParticipantException;
 import com.moogsan.moongsan_backend.domain.chatting.mapper.ChatMessageQueryMapper;
 import com.moogsan.moongsan_backend.domain.chatting.repository.ChatParticipantRepository;
 import com.moogsan.moongsan_backend.domain.chatting.repository.ChatRoomRepository;
-import org.springframework.data.redis.connection.RedisZSetCommands.Range;
-import org.springframework.data.redis.connection.RedisZSetCommands.Limit;
 import com.moogsan.moongsan_backend.domain.user.entity.User;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.bson.types.ObjectId;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
@@ -27,7 +26,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Duration;
-import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -40,7 +38,7 @@ import static com.moogsan.moongsan_backend.global.util.ObjectIdScoreUtil.toScore
 @RequiredArgsConstructor
 public class GetPastMessages {
 
-    private static final int PAGE_SIZE = 10;
+    private static final int PAGE_SIZE = 20;
     private final ChatMessageQueryMapper chatMessageQueryMapper;
     private final ChatParticipantRepository chatParticipantRepository;
     private final ChatRoomRepository chatRoomRepository;
@@ -53,145 +51,105 @@ public class GetPastMessages {
             Long chatRoomId,
             String cursorId
     ) {
-
-        // 채팅방 조회 -> 없으면 404
+        // 1) 권한 및 방 검증
         ChatRoom chatRoom = chatRoomRepository.findById(chatRoomId)
                 .orElseThrow(ChatRoomNotFoundException::new);
+        boolean isParticipant = chatParticipantRepository
+                .existsByChatRoom_IdAndUser_IdAndLeftAtIsNull(chatRoomId, currentUser.getId());
+        if (!isParticipant) throw new NotParticipantException("참여자만 메세지를 조회할 수 있습니다.");
 
-        // 참여자인지 조회 -> 아니면 403
-        boolean isParticipant = chatParticipantRepository.existsByChatRoom_IdAndUser_IdAndLeftAtIsNull(chatRoomId, currentUser.getId());
-
-        if(!isParticipant) {
-            throw new NotParticipantException("참여자만 메세지를 조회할 수 있습니다.");
-        }
-
-        // 레디스 캐싱
         String redisKey = "chatting:messages:" + chatRoomId;
+        double cursorScore = cursorId != null ? toScore(cursorId) : Double.MIN_VALUE;
 
-        // 레디스 캐시 조회
-        double minScore = cursorId != null ? toScore(cursorId) : Double.MIN_VALUE;
-        double maxScore = Double.MAX_VALUE;
+        // 2) Redis에서 캐시된 member(=JSON or id) 조회
+        Set<String> cachedMembers = redisTemplate.opsForZSet()
+                .rangeByScore(redisKey, cursorScore, Double.MAX_VALUE, 0, PAGE_SIZE + 1);
 
-        Set<String> cachedJsons = redisTemplate.opsForZSet()
-                .rangeByScore(redisKey, minScore, maxScore, 0, PAGE_SIZE + 1);
-
-
-        List<ChatMessageDocument> cachedMessages = Objects.requireNonNull(cachedJsons).stream()
-                .map(json -> {
-                    try {
-                        return objectMapper.readValue(json, ChatMessageDocument.class);
-                    } catch (JsonProcessingException e) {
-                        log.warn("❌ Redis 메세지 파싱 실패: {}", e.getMessage());
-                        return null;
+        // 3) member를 messageId로 변환 (JSON이면 id 필드 추출)
+        List<String> idList = cachedMembers.stream()
+                .map(member -> {
+                    member = member.trim();
+                    if (member.startsWith("{")) {
+                        // JSON 형태
+                        try {
+                            JsonNode node = objectMapper.readTree(member);
+                            return node.get("id").asText();
+                        } catch (JsonProcessingException e) {
+                            log.warn("Invalid JSON in cache: {}", member);
+                            return null;
+                        }
                     }
+                    // 단순 id 문자열
+                    return member;
                 })
                 .filter(Objects::nonNull)
-                .filter(doc -> !doc.getId().equals(cursorId))
-                .toList();
+                .filter(ObjectId::isValid)
+                .distinct()
+                .collect(Collectors.toList());
+        if (cursorId != null) idList.removeIf(id -> id.equals(cursorId));
 
-
-        // hasNext 판단 & 실제 페이지 사이즈로 자르기
-        List<ChatMessageDocument> page = new ArrayList<>(cachedMessages);
-        boolean hasNext = false;
-
-        if (page.size() < PAGE_SIZE) {
-            int needCount = PAGE_SIZE - page.size();
-
-            // 커서 기반 필터 생성
-            Query q = new Query();
-            if (cursorId == null || !ObjectId.isValid(cursorId)) {
-                q.addCriteria(Criteria.where("chatRoomId").is(chatRoomId));
-            } else {
-                q.addCriteria(new Criteria().andOperator(
-                        Criteria.where("chatRoomId").is(chatRoomId),
-                        Criteria.where("_id").gt(new ObjectId(cursorId))
+        // 4) 부족한 메시지는 MongoDB에서 조회 및 캐싱
+        List<ChatMessageDocument> dbDocs = new ArrayList<>();
+        if (idList.size() < PAGE_SIZE) {
+            int need = PAGE_SIZE - idList.size();
+            Query q = new Query(Criteria.where("chatRoomId").is(chatRoomId));
+            if (!idList.isEmpty()) {
+                q.addCriteria(Criteria.where("_id").nin(
+                        idList.stream().map(ObjectId::new).collect(Collectors.toList())
                 ));
             }
-
-            q.with(Sort.by(Sort.Order.asc("_id"))).limit(needCount + 1);
-
-            List<ChatMessageDocument> mongoDocs = mongoTemplate.find(q, ChatMessageDocument.class);
-            hasNext = mongoDocs.size() > needCount;
-            List<ChatMessageDocument> mongoPage = mongoDocs.stream().limit(needCount).toList();
-            page.addAll(mongoPage);
-
-            mongoPage.forEach(doc -> {
-                try {
-                    String json = objectMapper.writeValueAsString(doc);
-                    double score = toScore(doc.getId()); // tie-breaker 점수
-                    Boolean added =  redisTemplate.opsForZSet().add(redisKey, json, score);
-                    if (Boolean.TRUE.equals(added)) {
-                        redisTemplate.expire(redisKey, Duration.ofHours(24)); // 키가 새로 생성됐을 때만 TTL 부여
-                    }
-                } catch (JsonProcessingException e) {
-                    log.warn("❌ Redis 캐싱 실패: {}", e.getMessage());
-                }
+            q.with(Sort.by(Sort.Order.asc("_id"))).limit(need + 1);
+            List<ChatMessageDocument> fetched = mongoTemplate.find(q, ChatMessageDocument.class);
+            List<ChatMessageDocument> toCache = fetched.stream().limit(need).toList();
+            // Redis 캐싱: messageId만 저장
+            toCache.forEach(doc -> {
+                double score = toScore(doc.getId());
+                Boolean added = redisTemplate.opsForZSet().add(redisKey, doc.getId(), score);
+                if (Boolean.TRUE.equals(added)) redisTemplate.expire(redisKey, Duration.ofHours(1));
             });
-        } else {                        // 캐시에서 이미 10개 꽉 찬 경우
-            // 마지막 메시지 ID 기준으로 DB에 추가 1건만 확인
-            String lastId = page.get(PAGE_SIZE - 1).getId();
-
-            Query extraQ = new Query().addCriteria(
-                    new Criteria().andOperator(
-                            Criteria.where("chatRoomId").is(chatRoomId),
-                            Criteria.where("_id").gt(new ObjectId(lastId))
-                    ));
-            extraQ.with(Sort.by(Sort.Order.asc("_id"))).limit(1);
-
-            hasNext = !mongoTemplate.find(extraQ, ChatMessageDocument.class).isEmpty();
+            dbDocs.addAll(toCache);
         }
 
-
-        LinkedHashMap<String, ChatMessageDocument> dedup = new LinkedHashMap<>();
-        Stream.concat(cachedMessages.stream(), page.stream())                          // page = mongoPage
-                .sorted(Comparator.comparing(ChatMessageDocument::getId))              // 오름차순
-                .forEach(doc -> dedup.put(doc.getId(), doc));      // key = messageId
-
-        List<ChatMessageDocument> pageSorted = dedup.values()
-                .stream()
-                .limit(PAGE_SIZE)                                                       // 최종 슬라이스
-                .toList();
-
-        log.info("[Chat-Cache] room={}, cursorId={}, hitCount={}, finalSize={}, hasNext={}",
-                chatRoomId, cursorId, cachedMessages.size(), page.size(), hasNext);
-
-
-        // 빈 페이지인 경우 바로 리턴
-        if (page.isEmpty()) {
-            return ChatMessagePageResponse.builder()
-                    .chatMessageResponses(Collections.emptyList())
-                    .nextCursorId(null)         // 또는 cursorId 그대로
-                    .hasNext(false)
-                    .build();
-        }
-
-        // 참여자 정보 매핑
-        Set<Long> participantIds = pageSorted.stream()
-                .map(ChatMessageDocument::getChatParticipantId)
-                .collect(Collectors.toSet());
-        List<ChatParticipant> participants = chatParticipantRepository.findAllById(participantIds);
-        Map<Long, User> participantIdToUser = participants.stream()
-                .collect(Collectors.toMap(
-                        ChatParticipant::getId,
-                        ChatParticipant::getUser
-                ));
-
-        ChatMessageDocument last = pageSorted.getLast();
-        String nextCursorId    = last.getId();
-
-        // DTO 변환 후 반환
-        List<ChatMessageResponse> responses =  pageSorted.stream()
-                .map(doc -> {
-                    User user = participantIdToUser.get(doc.getChatParticipantId());
-                    String nickname = (user != null ? user.getNickname() : "알수없음");
-                    String imageKey = (user != null ? user.getImageKey() : null);
-                    return chatMessageQueryMapper.toMessageResponse(doc, nickname, imageKey);
-                })
+        // 5) 최종 ID 리스트 병합
+        Stream<ObjectId> fromCache = idList.stream()
+                .limit(PAGE_SIZE)
+                .map(ObjectId::new);
+        Stream<ObjectId> fromDb = dbDocs.stream()
+                .map(doc -> new ObjectId(doc.getId()));
+        List<ObjectId> finalIds = Stream.concat(fromCache, fromDb)
+                .distinct()
+                .limit(PAGE_SIZE)
                 .collect(Collectors.toList());
 
+        // 6) 최종 문서 조회 & 정렬
+        Query finalQ = new Query(Criteria.where("_id").in(finalIds));
+        finalQ.with(Sort.by(Sort.Order.asc("_id")));
+        List<ChatMessageDocument> finalPage = mongoTemplate.find(finalQ, ChatMessageDocument.class);
+
+        // 7) hasNext 재계산
+        boolean hasNext = finalPage.size() == PAGE_SIZE && (
+                !dbDocs.isEmpty() || cachedMembers.size() > PAGE_SIZE
+        );
+
+        // 8) DTO 변환
+        Set<Long> partIds = finalPage.stream()
+                .map(ChatMessageDocument::getChatParticipantId)
+                .collect(Collectors.toSet());
+        Map<Long, ChatParticipant> parts = chatParticipantRepository.findAllById(partIds)
+                .stream().collect(Collectors.toMap(ChatParticipant::getId, p -> p));
+        List<ChatMessageResponse> responses = finalPage.stream().map(doc -> {
+            ChatParticipant p = parts.get(doc.getChatParticipantId());
+            return chatMessageQueryMapper.toMessageResponse(
+                    doc,
+                    Optional.ofNullable(p).map(part -> part.getUser().getNickname()).orElse("Unknown"),
+                    Optional.ofNullable(p).map(part -> part.getUser().getImageKey()).orElse(null)
+            );
+        }).collect(Collectors.toList());
+
+        String nextCursor = finalPage.isEmpty() ? null : finalPage.get(finalPage.size() - 1).getId();
         return ChatMessagePageResponse.builder()
                 .chatMessageResponses(responses)
-                .nextCursorId(nextCursorId)
+                .nextCursorId(nextCursor)
                 .hasNext(hasNext)
                 .build();
     }
